--- a/templates/mods/new.html.twig
+++ b/templates/mods/new.html.twig
@@ -1,1 +1,9 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Template{% endblock %}
+
+{% block body %}
+
 {% include ('mods/_form.html.twig') %}
+
+{% endblock %}
