--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,6 +8,8 @@
 @import 'partials/header';
 @import 'partials/home';
 @import 'partials/module';
+@import 'partials/filter';
+@import 'partials/table';
 @import 'partials/footer';
 
 
