--- a/assets/styles/partials/_button.scss
+++ b/assets/styles/partials/_button.scss
@@ -1,17 +1,17 @@
 /* button */
 
-.button {
-    background-color: $red;
-    padding: 1.5rem;
-    text-decoration: none;
-    color: $white;
-    border-radius: 20%;
-}
+// .button {
+//     background-color: $red;
+//     padding: 1.5rem;
+//     text-decoration: none;
+//     color: $white;
+//     border-radius: 20%;
+// }
 
-.button a:hover {
-    color: $white;
-}
+// .button a:hover {
+//     color: $white;
+// }
 
-.btn-large {
-    padding: 1rem;
-}
+// .btn-large {
+//     padding: 1rem;
+// }
