--- a/templates/mods/index.html.twig
+++ b/templates/mods/index.html.twig
@@ -3,13 +3,96 @@
 {% block title %}Modules{% endblock %}
 
 {% block body %}
+    <header class="module-title-hdr entities">
+        <h1>Modules</h1>
+    </header>
 
-    GRAND MODULES
+    <div class="home-hdr-sep"> 
+    </div>
+    
+    <section class="module template">
+        <div class="module-content entity">
+            <nav class="list-filters">
+                <h3>Filtres</h3>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label class="label">ID</label>
+                            <input type="text" class="form-control w100" placeholder="" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label class="label">Nom Module</label>
+                            <input type="text" class="form-control w100" placeholder="" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label class="label">Statut Module</label>
+                            <select class="form-control selectpicker" title="">
+                                <option>actif</option>
+                                <option>Inactif</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-submit">
+                    {# <div class="col-md-6">
+                        <button type="button" class="btn btn-outline-primary btn-lg btn-block" data-icon="reset" title="Remettre à zéro les filtres"><span class="icon"></span><span class="text">RAZ</span></button>
+                    </div> #}
+                    <div class="col-md-6 button-filter">
+                        <button type="button" class="btn btn-outline-success btn-lg btn-block" data-icon="search" title="Rechercher"><span class="icon"></span><span class="text">Rechercher</span></button>
+                    </div>
+                </div>
+            </nav>
 
-    {% for module in modules %}
-        <p> {{ module.name }} </p>
-        <a href="{{ path('edit_module', {id: module.id}) }}">Modifier le module</a>
-    {% endfor %}
+            <div class="home-hdr-sep"> 
+            </div>
 
-    <a class="btn btn-outline-success btn-lg" href="{{ path('new_module') }}">Ajouter un module</a>
+            <h3 class="count-entity">{{ pluralize(modules|length, 'Module OptiSport', 'Modules OptiSport') }}</h3>
+
+            <div class="container table-container">
+                <table class="table table-bordered table-container">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Nom Module</th>
+                        <th scope="col">Date Création</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody class="table-group-divider">
+                    {% for module in modules  %}
+                        {# {% for mod in partner.mods %}
+                                {{ dump(mod) }}
+                        {% endfor %} #}
+                        <tr>
+                            <td scope="row"> {{ module.id }}</td>
+                            <td> {{ module.name }}</td>
+                            <td> Une Date dynamique, à fix</td>
+                            {% if module.isActive %}
+                                <td>Actif</td>
+                            {% else %}
+                                <td>Inactif</td>
+                            {% endif %}
+                            <td>
+                                <a class="btn btn-outline-success" href="{{ path('edit_template', {id: module.id}) }}">Modifier</a>
+                                <a class="btn btn-outline-danger" href="{{ path('edit_template', {id: module.id}) }}">Supprimer</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="table-sep "> 
+            </div>
+
+            <div class="add-entity">
+                <a class="btn btn-outline-success btn-lg" href="{{ path('new_module') }}">Ajouter un module</a>
+            </div>
+        </div>
+    </section><!-- /.module.projects -->
 {% endblock %}
