--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -3,30 +3,33 @@
 {% block title %}Partenaires{% endblock %}
 
 {% block body %}
-    <header class="module-title-hdr partner">
+    <header class="module-title-hdr entities">
         <h1>Partenaires</h1>
     </header>
+
+    <div class="home-hdr-sep"> 
+    </div>
     
     <section class="module partner">
-        <div class="module-content">
+        <div class="module-content entity">
             <nav class="list-filters">
                 <h3>Filtres</h3>
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="form-group">
-                            <label>ID</label>
+                            <label class="label">ID</label>
                             <input type="text" class="form-control w100" placeholder="" />
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label>Nom Partenaire</label>
+                            <label class="label">Nom Partenaire</label>
                             <input type="text" class="form-control w100" placeholder="" />
                         </div>
                     </div>
                     <div class="col-sm-3">
                         <div class="form-group">
-                            <label>Statut Partenaire</label>
+                            <label class="label">Statut Partenaire</label>
                             <select class="form-control selectpicker" title="">
                                 <option>actif</option>
                                 <option>Inactif</option>
@@ -34,33 +37,38 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row email">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label>Email Partenaire</label>
+                            <label class="label">Email Partenaire</label>
                             <input type="text" class="form-control w100" placeholder="" />
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-submit">
-                            <button type="button" class="btn btn-outline-primary" data-icon="reset" title="Remettre à zéro les filtres"><span class="icon"></span><span class="text">RAZ</span></button>
-                            <button type="button" class="btn btn-outline-success" data-icon="search" title="Rechercher"><span class="icon"></span><span class="text">Rechercher</span></button>
-                        </div>
+                </div>
+                <div class="form-submit">
+                    {# <div class="col-md-6">
+                        <button type="button" class="btn btn-outline-primary btn-lg btn-block" data-icon="reset" title="Remettre à zéro les filtres"><span class="icon"></span><span class="text">RAZ</span></button>
+                    </div> #}
+                    <div class="col-md-6 button-filter">
+                        <button type="button" class="btn btn-outline-success btn-lg btn-block" data-icon="search" title="Rechercher"><span class="icon"></span><span class="text">Rechercher</span></button>
                     </div>
                 </div>
             </nav>
 
-            <h3>{{ pluralize(partners|length, 'Partenaire', 'Partenaires') }}</h3>
+            <div class="home-hdr-sep"> 
+            </div>
+
+            <h3 class="count-entity">{{ pluralize(partners|length, 'Partenaire OptiSport', 'Partenaires OptiSport') }}</h3>
 
             <div class="container table-container">
-                <table class="table">
+                <table class="table table-bordered table-container">
                     <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Partenaires</th>
+                        <th class="" scope="col">#</th>
+                        <th scope="col">Nom Partenaire</th>
                         <th scope="col">Status</th>
+                        <th scope="col">Package Associé</th>
                         <th scope="col">Action</th>
-                        <th scope="col">Modules</th>
                     </tr>
                     </thead>
                     <tbody class="table-group-divider">
@@ -76,29 +84,37 @@
                             {% else %}
                                 <td>Inactif</td>
                             {% endif %}
+                            <td> {{ partner.template}}
+                                {# <ul>
+                                    {% for template in partner.template %}
+                                        {{ template.name }}
+                                    {% endfor %}
+                                 {% for mod in partner.mods %}
+                                    <li> {{ mod.name}} </li>
+                                 {% endfor %}
+                                </ul> #}
+                            </td>
                             <td>
                     
                                 <a class="btn btn-outline-primary" href="{{ path('app_partner_show', {id: partner.id}) }}">Voir</a>
                                 {% if partner.isActive %}
-                                    <button data-partner="{{partner.id}}" class="activatePartner deactivate">Désactiver</button> 
+                                    <button data-partner="{{partner.id}}" class="btn btn-outline-danger activatePartner deactivate">Désactiver</button> 
                                 {% else %}
-                                    <button data-partner="{{partner.id}}" class="activatePartner activate">Activer</button> 
+                                    <button data-partner="{{partner.id}}" class="btn btn-outline-success activatePartner activate">Activer</button> 
                                 {% endif %}
                             </td>
-                            <td>             
-                                <ul>
-                                 {% for mod in partner.mods %}
-                                    <li> {{ mod.name}} </li>
-                                 {% endfor %}
-                                </ul>
                         </tr>
                     {% endfor %}
                     </tbody>
                 </table>
             </div>
 
+            <div class="table-sep "> 
+            </div>
 
-            <a class="btn btn-outline-success btn-lg" href="{{ path('new_partner') }}">Ajouter un partenaire</a>
+            <div class="add-entity">
+                <a class="btn btn-outline-success btn-lg" href="{{ path('new_partner') }}">Ajouter un partenaire</a>
+            </div>
         </div>
     </section><!-- /.module.projects -->
 
