--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -15,19 +15,19 @@
                         <nav class="list-filters">
                 <h3>Filtres</h3>
                 <div class="row">
-                    <div class="col-sm-3">
+                    <div class="col-sm-2">
                         <div class="form-group">
                             <label class="label">ID</label>
                             <input type="text" class="form-control w100" placeholder="" />
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <div class="form-group">
                             <label class="label">Nom</label>
                             <input type="text" class="form-control w100" placeholder="" />
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-6">
                         <div class="form-group">
                             <label class="label">Prénom</label>
                             <input type="text" class="form-control w100" placeholder="" />
@@ -35,10 +35,20 @@
                     </div>
                 </div>
                 <div class="row email">
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <div class="form-group">
                             <label class="label">Email</label>
                             <input type="text" class="form-control w100" placeholder="" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label class="label">Rôle</label>
+                            <select class="form-control selectpicker" title="">
+                                <option>Administrateur OptiSport</option>
+                                <option>Manager Partenaire</option>
+                                <option>Manager Structure</option>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -66,7 +76,7 @@
                         <th scope="col">Prénom</th>
                         <th scope="col">Date Création</th>
                         <th scope="col">Email</th>
-                        {# <th scope="col">Rôle</th> #}
+                        <th scope="col">Rôle</th>
                         <th scope="col">Action</th>
                     </tr>
                     </thead>
@@ -78,11 +88,22 @@
                             <td>{{ user.firstName }}</td>
                             <td>{{ user.createdAt | date('d-m-Y') }}</td>
                             <td>{{ user.email }}</td>
-                            {# <td>{{ user.roles }}</td> #}
-                            
+                            {# <td>{{ user.roles | join(', ') }}</td> #}
+                            {% if "ROLE_ADMIN" in user.roles %}
+                                <td>Administrateur</td>
+                            {% elseif "ROLE_MANAGER" in user.roles %}
+                                <td>Manager Partenaire</td>
+                            {% else %}
+                                <td>Manager Structure</td>
+                            {% endif %}
                             <td>
-                                {# <a class="btn btn-outline-success" href="{{ path('edit_user', {id: user.id}) }}">Modifier</a>
-                                <a class="btn btn-outline-danger" href="{{ path('edit_user', {id: user.id}) }}">Supprimer</a> #}
+                                
+                            {% if "ROLE_ADMIN" in user.roles %}    
+                                {{ include('user/_delete_form.html.twig') }}
+                            {% else %}
+                                {# <a class="btn btn-outline-success" href="{{ path('edit_user', {id: user.id}) }}">Modifier</a> #}
+                                 <a class="btn btn-outline-primary" href="{{ path('edit_user', {id: user.id}) }}">Modifier</a>
+                            {% endif %}
                             </td>
                         </tr>
                     {% endfor %}
@@ -94,7 +115,7 @@
             </div>
 
             <div class="add-entity">
-                {# <a class="btn btn-outline-success btn-lg" href="{{ path('new_user') }}">Ajouter un Utilisateur</a> #}
+                <a class="btn btn-outline-success btn-lg" href="{{ path('new_admin') }}">Ajouter un Administrateur</a>
             </div>
         </div>
     </section><!-- /.module.projects -->
