Template  - fix redirection

--- a/templates/template/index.html.twig
+++ b/templates/template/index.html.twig
@@ -50,7 +50,7 @@
             <div class="home-hdr-sep"> 
             </div>
 
-            <h3 class="count-entity">{{ pluralize(templates|length, 'Package OptiSport', 'Packages OptiSport') }}</h3>
+            <h3 class="count-entity">{{ pluralize(templates|length, 'Packages OptiSport', 'Package OptiSport') }}</h3>
 
             <div class="container table-container">
                 <table class="table table-bordered table-container">
