--- a/templates/partner/_form.html.twig
+++ b/templates/partner/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{# {{ form_start(form) }}
     <div class="my-custom-class-for-errors">
         {{ form_errors(form) }}
     </div>
@@ -35,4 +35,5 @@
             {{ form_row(form.Ajouter)}}
         </div>
     </div>
-{{ form_end(form) }}
+{{ form_end(form) }} #}
+{{ form(form) }}
