debut design partnerShow

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,6 +9,7 @@
 @import 'partials/home';
 @import 'partials/module';
 @import 'partials/filter';
+@import 'partials/partner';
 @import 'partials/table';
 @import 'partials/footer';
 
