--- a/assets/styles/partials/_module.scss
+++ b/assets/styles/partials/_module.scss
@@ -17,6 +17,8 @@
 
 .module-title-hdr.entities {
     margin: 4rem 0rem;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .partner-img {
