--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <header class="module-title-hdr entities">
-        <h1>Partenaires</h1>
+        <h1 class="title-entity">Partenaires</h1>
     </header>
 
     <div class="home-hdr-sep"> 
