--- a/templates/template/index.html.twig
+++ b/templates/template/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <header class="module-title-hdr entities">
-        <h1>Packages</h1>
+        <h1 class="title-entity">Packages</h1>
     </header>
 
     <div class="home-hdr-sep"> 
