Filtre partner version - bug a fixer sur l'affichage de partner.template

--- a/assets/styles/partials/_button.scss
+++ b/assets/styles/partials/_button.scss
@@ -1,17 +1,5 @@
 /* button */
 
-// .button {
-//     background-color: $red;
-//     padding: 1.5rem;
-//     text-decoration: none;
-//     color: $white;
-//     border-radius: 20%;
-// }
-
-// .button a:hover {
-//     color: $white;
-// }
-
-// .btn-large {
-//     padding: 1rem;
-// }
+.btn-entity-show  {
+    margin-right: 0.8rem;
+}
