--- a/assets/styles/partials/_module.scss
+++ b/assets/styles/partials/_module.scss
@@ -16,7 +16,7 @@
 }
 
 .module-title-hdr.entities {
-    margin: 4rem 0rem;
+    margin-top: 2rem;
     justify-content: center;
     flex-direction: column;
 }
@@ -78,4 +78,8 @@
 .table-sep {
     border-bottom: 2px solid;
     color: $green;
+}
+
+.status {
+    margin-top: 1rem;
 }
