--- a/assets/styles/partials/_typography.scss
+++ b/assets/styles/partials/_typography.scss
@@ -6,7 +6,6 @@
 
 html, body {
 font-family: 'Source Sans Pro', sans-serif;
-font-size: 0.8rem;
 letter-spacing: 0.2rem;
 }
 
@@ -38,5 +37,10 @@ letter-spacing: 0.2rem;
 .module-header {
     font-size: 3rem;
     font-family: 'Julius Sans One', sans-serif;
+    color: $red;
+}
+
+.entity-status {
+    font-size: 1.5rem;
     color: $red;
 }
