--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block javascripts %}
         {{ encore_entry_script_tags('partnerFilter') }}
+        {{ encore_entry_script_tags('partnerStatusFilter') }}
 		{{ parent() }}
  {% endblock %}
 
@@ -12,6 +13,21 @@
 {% block body %}
     <header class="module-title-hdr entities">
         <h1 class="title-entity">Partenaires</h1>
+            <div class="module-info">
+            <p class="module-text partner-text"> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Libero odit ab est aliquid sapiente. 
+                Aut ipsum sunt id totam tempora, aspernatur est quisquam corrupti corporis, 
+                neque quasi ex quis consectetur.
+            </p>
+            <div class="status">
+                <p class="module-text entity-status"> {{ partners | length }} partenaire(s) OptiSport au total </p>
+                <p class="module-text entity-status"> {{ activePartners | length}} partenaire(s) OptiSport actif </p>
+            </div>
+            <div class="add-entity">
+                <a class="btn btn-outline-success btn-lg" href="{{ path('new_partner') }}">Ajouter un partenaire</a>
+            </div>
+        </div>
     </header>
 
     <div class="home-hdr-sep"> 
@@ -22,43 +38,22 @@
             <nav class="list-filters">
                 <h3>Filtres</h3>
                 <div class="row">
-                    <div class="col-sm-3">
-                        <div class="form-group">
-                            <label class="label">ID</label>
-                            <input type="text" class="form-control w100" placeholder="" />
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-8">
                         <div class="form-group">
                             <label class="label">Nom Partenaire</label>
                             <input type="text" class="form-control w100" id="partnerName" placeholder="" />
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="form-group">
                             <label class="label">Statut Partenaire</label>
                             <select class="form-control selectpicker" id="partnerStatus" title="">
-                                <option>actif</option>
-                                <option>Inactif</option>
+                                <option value="1">actif</option>
+                                <option value="0">Inactif</option>
+                                <option value="all">Tous</option>
                             </select>
                         </div>
                     </div>
-                </div>
-                <div class="row email">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label class="label" id="partnerEmail">Email Partenaire</label>
-                            <input type="text" class="form-control w100" placeholder="" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-submit">
-                    {# <div class="col-md-6">
-                        <button type="button" class="btn btn-outline-primary btn-lg btn-block" data-icon="reset" title="Remettre à zéro les filtres"><span class="icon"></span><span class="text">RAZ</span></button>
-                    </div> #}
-                    {# <div class="col-md-6 button-filter">
-                        <button type="button" class="btn btn-outline-success btn-lg btn-block" data-icon="search" title="Rechercher"><span class="icon"></span><span class="text">Rechercher</span></button>
-                    </div> #}
                 </div>
             </nav>
 
@@ -82,13 +77,14 @@
                         <th scope="col">Action</th>
                     </tr>
                     </thead>
-                    <tbody class="table-group-divider">
+                
+                    <tbody class="tbody-content table-group-divider">
                         {% for partner in partners  %}
                             {# {% for mod in partner.mods %}
                                     {{ dump(mod) }}
                             {% endfor %} #}
                             <tr class="partnerTr">
-                              
+                            
                                 <td class="parterId" scope="row"> {{ partner.id }}</td>
                                 <td class="partnerName">{{ partner.name }}</td>
                                 <td class="partnerCreatedAt">{{ partner.createdAt | date('d-m-Y')}}</td>
@@ -114,14 +110,11 @@
                             </tr>
                         {% endfor %}
                     </tbody>
+                
+                    <tbody class="tbody-show-results table-group-divider">
+                    </tbody>
+                   
                 </table>
-            </div>
-
-            <div class="table-sep "> 
-            </div>
-
-            <div class="add-entity">
-                <a class="btn btn-outline-success btn-lg" href="{{ path('new_partner') }}">Ajouter un partenaire</a>
             </div>
         </div>
     </section><!-- /.module.projects -->
